basar__reg_all_libs/basar__reg_v4/build12/reg_deb_12.txt

h.benabdelaziz@znbs21:/software/home/benabdelaziz/basar_regression/pharmos.base.basar/dev/src/basar/regression # ./do_regression.sh
Cleaning old test outputs...
=========================================
  Basar Regression Test Suite
=========================================

Regression directory: /software/home/benabdelaziz/basar_regression/pharmos.base.basar/dev/src/basar/regression
Start time: Mon Nov 24 10:12:24 CET 2025

=========================================
Test 1: libbasarcmnutil/date_operations
=========================================
Running: /software/home/benabdelaziz/basar_regression/pharmos.base.basar/dev/src/basar/regression/libbasarcmnutil/date_operations/go.sh
Working directory: /software/home/benabdelaziz/basar_regression/pharmos.base.basar/dev/src/basar/regression/libbasarcmnutil/date_operations
Exit code: 1


==> Checking ]basar/regression/libbasarcmnutil/date_operations/go.out[ for patterns from ]basar/regression/libbasarcmnutil/date_operations/patterns.txt[
Pattern 'Basar Date Operations Test' NOT found.
Pattern 'Test 1: Date Creation' NOT found.
Pattern 'Created date: 2024-04-22' NOT found.
Pattern 'Year: 2024' NOT found.
Pattern 'Month: 4' NOT found.
Pattern 'Day: 22' NOT found.
Pattern 'Test 2: Date Arithmetic' NOT found.
Pattern 'After adding 10 days: 2024-05-02' NOT found.
Pattern 'Test 3: Calculate Days Between Dates' NOT found.
Pattern 'Days from date1 to date2: 10' NOT found.
Pattern 'Test 4: Date Validation' NOT found.
Pattern '2024-02-29 is valid: yes' NOT found.
Pattern '2023-02-29 is valid: no' NOT found.
Pattern 'Test 5: Current Date' NOT found.
Pattern 'Today is valid: yes' NOT found.
Pattern 'All date operations completed successfully' NOT found.
Pattern 'Build successful - binary created' NOT found.
Pattern 'Test exit code: 0' NOT found.
Pattern 'libbasarcmnutil.so' NOT found.
==> 0 out of 19 patterns found. Success rate: 0%
✗ FAILED

First 10 lines of test output:
  g++ -g -std=c++17 -maix64 -pthread -I../../../library/include -I../../../../../ext/log4cplus/include -I../../../../../ext/boost/include -o date_operations main.cpp -L../../../library/lib/debug -L../../../../../ext/log4cplus/lib/debug -L../../../../../ext/boost/lib -lbasarcmnutil -lbasardebug -llog4cplus -lboost_system -lboost_filesystem -maix64 -pthread -Wl,-brtl
  main.cpp: In function 'int main()':
  main.cpp:15:51: error: no matching function for call to 'basar::cmnutil::Date::toString()'
     15 |         cout << "Created date: " << date1.toString().c_str() << endl;
        |                                     ~~~~~~~~~~~~~~^~
  In file included from ../../../library/include/libbasarcmnutil.h:35,
                   from main.cpp:3:
  ../../../library/include/libbasarcmnutil_date.h:188:57: note: candidate: 'const basar::cmnutil::I18nString basar::cmnutil::Date::toString(basar::ConstString) const'
    188 |         LIBBASARCMNUTIL_API     const I18nString        toString                (ConstString   format           //!< format control string, see Informix ESQL/C manual
        |                                                         ^~~~~~~~

=========================================
Test 2: libbasarcmnutil/decimal_arithmetic
=========================================
Running: /software/home/benabdelaziz/basar_regression/pharmos.base.basar/dev/src/basar/regression/libbasarcmnutil/decimal_arithmetic/go.sh
Working directory: /software/home/benabdelaziz/basar_regression/pharmos.base.basar/dev/src/basar/regression/libbasarcmnutil/decimal_arithmetic
Exit code: 1


==> Checking ]basar/regression/libbasarcmnutil/decimal_arithmetic/go.out[ for patterns from ]basar/regression/libbasarcmnutil/decimal_arithmetic/patterns.txt[
Pattern 'Basar Decimal Arithmetic Test' NOT found.
Pattern 'Test 1: Decimal Creation' NOT found.
Pattern 'Decimal from string '123.45': 123.45' NOT found.
Pattern 'Test 2: Decimal Addition' NOT found.
Pattern '123.45 + 67.89 = 191.34' NOT found.
Pattern 'Test 3: Decimal Subtraction' NOT found.
Pattern '123.45 - 67.89 = 55.56' NOT found.
Pattern 'Test 4: Decimal Multiplication' NOT found.
Pattern 'Test 5: Decimal Comparison' NOT found.
Pattern '100.00 < 200.00: true' NOT found.
Pattern '200.00 > 100.00: true' NOT found.
Pattern 'Test 6: Decimal Precision' NOT found.
Pattern 'All decimal operations completed successfully' NOT found.
Pattern 'Build successful - binary created' NOT found.
Pattern 'Test exit code: 0' NOT found.
Pattern 'libbasarcmnutil.so' NOT found.
==> 0 out of 16 patterns found. Success rate: 0%
✗ FAILED

First 10 lines of test output:
  g++ -g -std=c++17 -maix64 -pthread -I../../../library/include -I../../../../../ext/log4cplus/include -I../../../../../ext/boost/include -o decimal_arithmetic main.cpp -L../../../library/lib/debug -L../../../../../ext/log4cplus/lib/debug -L../../../../../ext/boost/lib -lbasarcmnutil -lbasardebug -llog4cplus -lboost_system -lboost_filesystem -maix64 -pthread -Wl,-brtl
  main.cpp: In function 'int main()':
  main.cpp:47:20: error: ISO C++ forbids declaration of 'Exception' with no type [-fpermissive]
     47 |     } catch (const Exception& ex) {
        |                    ^~~~~~~~~
  main.cpp:47:29: error: expected ')' before '&' token
     47 |     } catch (const Exception& ex) {
        |             ~               ^
        |                             )
  main.cpp:47:29: error: expected '{' before '&' token

=========================================
Test 3: libbasarcmnutil/hello_basar
=========================================
Running: /software/home/benabdelaziz/basar_regression/pharmos.base.basar/dev/src/basar/regression/libbasarcmnutil/hello_basar/go.sh
Working directory: /software/home/benabdelaziz/basar_regression/pharmos.base.basar/dev/src/basar/regression/libbasarcmnutil/hello_basar
Exit code: 1


==> Checking ]basar/regression/libbasarcmnutil/hello_basar/go.out[ for patterns from ]basar/regression/libbasarcmnutil/hello_basar/patterns.txt[
Pattern 'Hello from Basar!' NOT found.
Pattern 'Version:' NOT found.
Pattern 'Test completed successfully' NOT found.
Pattern 'Build successful - binary created' NOT found.
Pattern 'Test exit code: 0' NOT found.
Pattern 'libbasarcmnutil.so' NOT found.
==> 0 out of 6 patterns found. Success rate: 0%
✗ FAILED

First 10 lines of test output:
  g++ -g -std=c++17 -maix64 -pthread -I../../../library/include -I../../../../../ext/log4cplus/include -I../../../../../ext/boost/include -o hello_basar main.cpp -L../../../library/lib/debug -L../../../../../ext/log4cplus/lib/debug -L../../../../../ext/boost/lib -lbasarcmnutil -lbasardebug -llog4cplus -lboost_system -lboost_filesystem -maix64 -pthread -Wl,-brtl
  main.cpp: In function 'int main()':
  main.cpp:11:60: error: 'today' is not a member of 'basar::cmnutil::Date'
     11 |         basar::cmnutil::Date today = basar::cmnutil::Date::today();
        |                                                            ^~~~~
  main.cpp:13:51: error: no matching function for call to 'basar::cmnutil::Date::toString()'
     13 |         cout << "Today's date: " << today.toString().c_str() << endl;
        |                                     ~~~~~~~~~~~~~~^~
  In file included from ../../../library/include/libbasarcmnutil.h:35,
                   from main.cpp:2:

=========================================
Test 4: standalone/cpp_basics
=========================================
Running: /software/home/benabdelaziz/basar_regression/pharmos.base.basar/dev/src/basar/regression/standalone/cpp_basics/go.sh
Working directory: /software/home/benabdelaziz/basar_regression/pharmos.base.basar/dev/src/basar/regression/standalone/cpp_basics
Exit code: 1


==> Checking ]basar/regression/standalone/cpp_basics/go.out[ for patterns from ]basar/regression/standalone/cpp_basics/patterns.txt[
Pattern '' found.
Pattern 'Build successful - binary created' NOT found.
Pattern 'C++ Basics Test' NOT found.
Pattern 'String test: Hello' NOT found.
Pattern 'Vector size: 5' NOT found.
Pattern 'Sum: 15' NOT found.
Pattern 'All tests passed' NOT found.
Pattern 'Exit code: 0' NOT found.
Pattern 'Test execution completed with exit code 0' NOT found.
==> 1 out of 9 patterns found. Success rate: 11%
✗ FAILED

First 10 lines of test output:
  c++ -g -std=c++17 -o cpp_basics main.cpp
  make: c++: A file or directory in the path name does not exist.
  make: *** [makefile:9: cpp_basics] Error 127

  ERROR: Build failed - executable not created

=========================================
Test 5: standalone/infrastructure_test
=========================================
Running: /software/home/benabdelaziz/basar_regression/pharmos.base.basar/dev/src/basar/regression/standalone/infrastructure_test/go.sh
Working directory: /software/home/benabdelaziz/basar_regression/pharmos.base.basar/dev/src/basar/regression/standalone/infrastructure_test
Exit code: 0


==> Checking ]basar/regression/standalone/infrastructure_test/go.out[ for patterns from ]basar/regression/standalone/infrastructure_test/patterns.txt[
Pattern '' found.
Pattern 'Build successful - binary created' found.
Pattern 'Basar Regression Infrastructure Test' found.
Pattern 'Test execution: PASS' found.
Pattern 'Exit code: 0' found.
Pattern 'Test execution completed with exit code 0' found.
==> 6 out of 6 patterns found. Success rate: 100%
✓ PASSED

=========================================
  Regression Test Results
=========================================

Total tests:  5
Passed:       1
Failed:       4

End time: Mon Nov 24 10:12:30 CET 2025

FAILURE: 4 of 5 tests failed ✗

See /software/home/benabdelaziz/basar_regression/pharmos.base.basar/dev/src/basar/regression/regression.summary for details
h.benabdelaziz@znbs21:/software/home/benabdelaziz/basar_regression/pharmos.base.basar/dev/src/basar/regression #